feat(auto_balancer): introduce goal group for score calculation of different resources
Signed-off-by: Shichao Nie <niesc@automq.com>